@@ -1,8 +1,9 @@
 AUX empty_name_on_rename.patch 1795 SHA256 caa18dee37e68ff8fcea1f8571fa39628eee941e3ac81f42482a0539c59be7ca SHA512 1e0face50799fe70d0c650d95d2ffb2090ac82bb7f9e6e7670eba4f4881b6f7345e10151749e5d7241b9479201a9659c26b2d3508817a119975e550b0839ea7b WHIRLPOOL 201eb86a4f49f012debd842fa025f77b39b27af328faa9d2ddadbb8d7521379560701b4cc955e79284dbababfa2a36bf08054e6deef8f6188f2c7a2739eaa641
 AUX missing-gconf-2.m4.patch 1744 SHA256 e2d42a08cd3c90f6febcd90bb4760aeb39f625b7d550223cbee798e165cdde11 SHA512 9a36ba602c2de7fe6a3627bfea9a7af07ab5c93e565a7f5942634fdb6eaba308b57955c07ea79cd45777c509e2fefa2c5275feca85865f989cf129c7d577c5db WHIRLPOOL a401e71959cb39a38b2e605871c382813232fda47a376549239d1c9534fd6e216489b7c985102543d477ef2551ac812fe8350835b6377ca78668f3aa9e3f1deb
+DIST jack_mixer-10.tar.gz 415996 SHA256 165bc1f8e21f32a244651bf6c120cfd1d3c5dd9a99a3f0cce9c6068600727121 SHA512 de5ad14661afd5e911fe001a53e146f8cc41c6a701a94e9321daf4980b928a0f497401119199a9ff7f3b1dfe84bb5916454543fbbc5f7a82adcafc177e7e436b WHIRLPOOL da3bedb3901bef95cefb6f1faaf3cdf9cc9e97973663ce97e2662d1d522555ff89eaa24d9a661687706cbdd936f5bac2f057a4d9b6f73fa8e7894303db544ff7
 DIST jack_mixer-9.tar.gz 381557 SHA256 7683b637368bf515031c362c1a698edfaf390f1b3ba0f5211fe3277a496520f7 SHA512 012360dc2472c8313d29a365e1ede4f5d1922c3815cc51ff69895e1d705b73dfe126930995fda498548db356071afe8ce42f5321b5dbeadc72e5aa773576c5e0 WHIRLPOOL 292e637f7b044c0e58a4c45162c9d58602c77546dbf341dfcbdb89cc0f5a96283d0740b087e582eb1463be1d7cd40e1baed6dbebe663f3fda9e5606e257694b9
+EBUILD jack_mixer-10.ebuild 1231 SHA256 91aea464fb90afe40406a48e5331c8fbc182792c10cb1bbca4f774ce1da211e0 SHA512 2a17323332116f7aec9fdc0be6a8439a5aaa2ec7453468292797f4d8f9f80e3d0d5c0ca0e46a390fbadb5a05af86005c2a67d35255090f8058e168432185161d WHIRLPOOL 3f017879f4473d7c13e482fc610572f4ee983700098671241f33bb63ca36b8f50ddf300802ec344eeee56a448f7dbc363355f7875de89c7dd27eae7988f2c685
 EBUILD jack_mixer-9-r1.ebuild 1168 SHA256 2c19d1038353cd198e6fa99684c22e950dbf8124b84d8fb0eaed46c50e5ac7b9 SHA512 f953956d993189c69baae3eb96a789d43508a8cf6e98a99fdb3234af883663184f2bd33561cc811ddee77b02ca1f669e7d92e49ecacb77a49400b2c73110d21e WHIRLPOOL eb305c4292fa1e814c1eef2381411b906b90d43bfb080d7c505a1dc5433fbe9fcb090b3662471a7cc65bc2d0a6f0a57f0e2f55bbf76091a5e151bae40fe4d603
-EBUILD jack_mixer-9.ebuild 965 SHA256 a2a03d3d47691c22a0f6288d5f8906152d0e1db024357786a24fa2290a9d4a7b SHA512 51e3a5ef7ee7eea2f4805d69b81d169fc11459b9281350af8297d537209305a95ccad5b8fca0407241881c1a33c83f47d69a5f788628bb2a56208f698f8d8c49 WHIRLPOOL 3d13072566d982c6647e514bd6a6d0aefc4166d0e1e8d16273cafd8f21e71165ce45841ccab8739bedf4828d15b8d4cfe957bbeb85b25278a1bb58b973687c95
-EBUILD jack_mixer-9999.ebuild 1201 SHA256 e3fcce811b4a265bfbd0c864703409cc82ae420b214736ac23522e3701c9b58f SHA512 d115d9fd8fc7e84e5fac087c0b698e17158e752011b776d740b40a5059b5bca7186e9f77f427be6f3548777947f8ce0ae9453ab9d6d97c2700b3ca1bd1e036b5 WHIRLPOOL 0c74bac17f82d46d985ff9ea3f651d05c40d7cba9589421677cf8a0f337f0df9589d7ac8655182c457f756ca97a257f61fa27b7f72904871d7064afa30c5abcd
-MISC ChangeLog 2183 SHA256 164a36ef8dc0760efc925a2e26d7f268c172810becc4491dc0e2a4c81adbec7e SHA512 739aea878aa5a899b2f4516b8e1c890ba29441da3fbc3cc1796dc43da7eefa1ce154be9d4b427f86eeaaa4db6fc9f7fa44e91ad5b4cb8e1b3d05f0c3c8271aa1 WHIRLPOOL 35c3ff68c270ac339f2d63cf75a43f0e94571d6cf07f800987f98292b94522bb893af82e79c3eacec5fe4630d48f436ce862b6312dbae13e5bf779e60d250b23
+EBUILD jack_mixer-9999.ebuild 1265 SHA256 5a7161dd297437ee99a87c0997ee62cc1061d48f8c7b696c362c0cabfd1af7e0 SHA512 3e5743935edc4cc523d720c02186c381aa611898b4d59c0057fc6f5b759957ce2e184a029a94c3942556578ffe66c8ac2337d11520e271938f84691af46a2ca0 WHIRLPOOL 0207f44e7391d669fabe3d25848c0930d5a0a15da00e9e74bf624b678b7a57bab75d14cd6f24995888566dec54709c30819135e8ff9036a193ee5a0123c73976
+MISC ChangeLog 2431 SHA256 2916ad1cd7a1626007b90f7bf64dafcb91e91d06b340236da9ccf0cceafee7c9 SHA512 52bac937c0f6c09c191974415da101043e43b8b593e515ad6680d860b872e894cc85e60597b06f34b037ddca33f86178d83e845a15a080b9c8a7545ee6f0fb1c WHIRLPOOL 0e72ff8136be7e0f5a068ea607928583f154e9661d66d026c871395690bd4015b8ec27c991807bb38b8853df92161c318f4acfd1b24dbd7ac38c1a8c948ea7e0
 MISC metadata.xml 458 SHA256 440275f45c665a342894b21ad029af52d75ae931bff7aaf1d8a9e45b8f4014bb SHA512 3703075d2a214f22737dfdd965dc9065150348c7b110a17619f1f56921396980b8ef34b74b43f1cded580da7372eca5696c3a7ef628043cf747f37446f6c7f27 WHIRLPOOL 1de830c0e16c272b5d8c130f1fbb4521f32882b3c7c58ceeac146b768cd4f6d14a08b6305a80b8660c3efd75e24f79a360b96cc724b9c9c9587c9e8c0845d49e
